fix: bugfix controls & imports

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     position: relative;
@@ -19,13 +23,15 @@ body {
 }
 
 .menu {
-    display: flex;
+    padding-top: 200px;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
-.menu.content {
+.menu .menu_content {
+    margin: 0 auto;
     max-width: 400px;
     max-height: 400px;
 }
